--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1> -->
 
 
 <!--<h3>{{counter}}</h3>
@@ -7,8 +7,8 @@ Aqui estamos llamando el metodo que creamos en components.ts
 <button (click)="reset()">Resert</button>
 <button (click)="increaseBy(-1)">-1</button>
 -->
-<hr>
+<!-- <hr>
 <app-counter></app-counter>
-<app-heroes-hero></app-heroes-hero>
+<app-heroes-hero></app-heroes-hero> -->
 <!-- <app-heroes-list></app-heroes-list> -->
-
+<app-dbz-main-page></app-dbz-main-page>
