--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -3,22 +3,16 @@
 
 <div class="row">
   <div class="col">
-    <h4>Listado</h4>
-    <ul class="list-group">
-      <li class="list-group-item">Krillin - 500</li>
-      <li class="list-group-item">Goku - 10,000</li>
-    </ul>
+    <app-dbz-list
+    [characterList]="characters"
+    (onDeleteId)="onDeleteCharacter($event)"
+    ></app-dbz-list>
   </div>
 
   <div class="col">
-    <h4>Agregar Personaje</h4>
-    <form class="row">
-      <input type="text" class="form-comtrol mb-2" placeholder="Nombre del personaje">
-      <input type="number" class="form-comtrol mb-2" placeholder="Poder">
-      <button type="submit" class="btn btn-primary">Agregar</button>
-
-    </form>
+    <!-- {{characters}} -->
+    <!-- (onNewCharacter)="onNewCharacter($event) lo estamos mandando a llamr de main-page-component.ts, a su vez la variable $event, lo estamos mandando a llamar
+    del @Output que esta en add-character.component.ts -->
+    <app-dbz-add-character (onNewCharacter)="onNewCharacter($event)"></app-dbz-add-character>
   </div>
-
-
 </div>
